make icons bigger

--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
       <a href="mailto:hi@kushagra.me" class="contact">Say Hello</a>
 
       <div class="social">
-        <a class="social-link" href="https://dribbble.com/kushsolitary"><i class="fa fa-dribbble"></i></a>
-        <a class="social-link" href="https://github.com/kushsolitary"><i class="fa fa-github"></i></a>
-        <a class="social-link" href="https://twitter.com/kushsolitary"><i class="fa fa-twitter"></i></a>
-        <a class="social-link" href="https://medium.com/@kush.ag"><i class="fa fa-medium"></i></a>
-        <a class="social-link" href="https://instagram.com/kush.ag"><i class="fa fa-instagram"></i></a>
+        <a class="social-link" href="https://dribbble.com/kushsolitary"><i class="fa fa-lg fa-dribbble"></i></a>
+        <a class="social-link" href="https://github.com/kushsolitary"><i class="fa fa-lg fa-github"></i></a>
+        <a class="social-link" href="https://twitter.com/kushsolitary"><i class="fa fa-lg fa-twitter"></i></a>
+        <a class="social-link" href="https://medium.com/@kush.ag"><i class="fa fa-lg fa-medium"></i></a>
+        <a class="social-link" href="https://instagram.com/kush.ag"><i class="fa fa-lg fa-instagram"></i></a>
       </div>
 
       <div class="clients">
